Bug 16127 - Boot freeze on HP Compaq nx6325 (RS482) with Radeon KMS
Summary: Boot freeze on HP Compaq nx6325 (RS482) with Radeon KMS
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Video(DRI - non Intel) (show other bugs)
Hardware: All Linux
: P1 blocking
Assignee: drivers_video-dri
URL:
Keywords:
Depends on:
Blocks: 16055
  Show dependency tree
 
Reported: 2010-06-04 21:14 UTC by Jure Repinc
Modified: 2010-06-21 18:08 UTC (History)
3 users (show)

See Also:
Kernel Version: 2.6.35-rc1
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
don't touch power state (518 bytes, patch)
2010-06-04 22:53 UTC, Alex Deucher
Details | Diff
fix pm on rs4xx IGPs (1.43 KB, patch)
2010-06-07 02:09 UTC, Dave Airlie
Details | Diff

Description Jure Repinc 2010-06-04 21:14:55 UTC
When I start up my laptop HP Compaq nx6325 with integrated RS482 and have Radeon KMS enabled the laptop just freezes when it usually would switch to the right resolution. All worked fine in kernel version 2.6.24. I bisected the commits and the one that was problematic is:
ce8f53709bf440100cb9d31b1303291551cf517f
drm/radeon/kms/pm: rework power management
Comment 1 Alex Deucher 2010-06-04 21:23:30 UTC
Does applying the following two patches help?
http://people.freedesktop.org/~agd5f/0001-drm-radeon-kms-add-support-for-internal-thermal-sens.patch
http://people.freedesktop.org/~agd5f/0001-drm-radeon-kms-pm-Misc-fixes.patch
The first one isn't relevant to your hw, but the second one won't apply cleanly
without it.
Comment 2 Jure Repinc 2010-06-04 22:00:02 UTC
Applied and recompiled and it didn't help.
Comment 3 Alex Deucher 2010-06-04 22:53:32 UTC
Created attachment 26654 [details]
don't touch power state

Does this patch fix it?
Comment 4 Jure Repinc 2010-06-04 23:09:02 UTC
No, still freezes.
Comment 5 Dave Airlie 2010-06-07 02:09:14 UTC
Created attachment 26677 [details]
fix pm on rs4xx IGPs

does this help?

btw can you suspend/resume on that machine?
Comment 6 Jure Repinc 2010-06-07 23:20:54 UTC
Yes, after applying this patch laptop boots again normaly. Thanks!

As for suspending/resuming:
Most of the time it suspends and resumes just fine. But in about 1 out of 5-10 tries the machine freezes, mostly when suspending, sometimes when comming back. The screen just remains black. And I have a feeling that the chance of freezing up is higher if I leave a DVD in the DVD drive and it spins it up/down while resumning or suspending. But this is also the case on kernel 2.6.34. Not just with 2.6.25-rc1. I should probably report another bug for this problem?
Comment 7 Rafael J. Wysocki 2010-06-08 21:59:50 UTC
Handled-By : Dave Airlie <airlied@linux.ie>
Patch : https://bugzilla.kernel.org/attachment.cgi?id=26677
Comment 8 Dave Airlie 2010-06-21 05:47:58 UTC
fix is in Linus kernel

9bad145ee2ef43ac36d397190a7d8b1a7306d3fb

Note You need to log in before you can comment on or make changes to this bug.